--- a/modules/689/pages/amt-decree.adoc
+++ b/modules/689/pages/amt-decree.adoc
@@ -99,7 +99,7 @@ erkannt und vollzogen werde.
   Decr: Bückeburg 13t Juli 1841.
   Fürstlich Schaumburg Upp. Amt.
 
-     Haadr   Yöcker [or Jöcker]
+     Haadr   Höcker
 ....
 
 |
@@ -145,6 +145,6 @@ carried out immediately.
 Decree: Bückeburg, 13 July 1841
 Fürstlich Schaumburg-Lippe Amt
 
-Haadr   Yöcker [or Jöcker]
+Haadr   Höcker
 ____
 |===
