--- a/modules/689/pages/doc-02.adoc
+++ b/modules/689/pages/doc-02.adoc
@@ -135,7 +135,7 @@ N. C. 438i             Gesuch des Colons Krückeberg N. 10
     Auspfandung einstweilen sistirt haben
     Bückeburg den 7t October 1841.
 
-    Hauck N Neuhsel, Yöcker[Jöcker]
+    Hauck N Neuhsel, Höcker
 
     Rl. rescrib: Das Amt habe
     wie angetragen den
@@ -208,7 +208,7 @@ that claim.
 Finally, we note that we have temporarily stayed execution of the
 distraint ordered against Krückeberg.  Bückeburg, 7 October 1841.
 
-Hauck – Neuhsel – Jöcker
+Hauck – Neuhsel – Höcker
 
 Rescript: The Amt shall, as requested, notify Krückeberg.
 B[ückeburg], 14 Oct. 1841.
