--- a/modules/689/pages/doc-04.adoc
+++ b/modules/689/pages/doc-04.adoc
@@ -32,8 +32,8 @@ an einer Durchlauten zu richten, um ein darlehn von
 200 rt aus der kammerkasse gegen eine gerichtliche
 Sicherheit zu genehmigen, oder wenn das nicht sein könnte,
 so bitte ich unsere durchlauchtigsten Fürst. Meine Ländereien
-welche mein Vater 1814 und 1818 von der Verschädtlichen
-Söhne, für 835 rt 3 g gekauft hat mich wieder abzu-
+welche mein Vater 1814 und 1818 von der Her[r]schaftlichen
+Söhre[Söhren], für 835 rt 3 g gekauft hat mich wieder abzu-
 nehmen, weil mir vom Amte schon durch dem amtsasse-
 sor Höcker Verkauf meiner Stätte gedrohet ist, übri-
 gens außfändung meines eignes vermögens erkommt[erkommen]
