--- a/modules/689/pages/doc-03.adoc
+++ b/modules/689/pages/doc-03.adoc
@@ -132,6 +132,7 @@ filed.
 |===
 
 == Valuation and Clerk’s Opinion (15 November 1841)
+
 [role="section-narrow"]
 === Summary
 
@@ -146,11 +147,7 @@ Collegium, shows that the Rentcammer’s board itself acted on the clerk’s opi
 petition is to be rejected.” In short: the numbers didn’t convince the authorities that a rescue loan was secure,
 and the risk of a forced sale remaimed imminent.
 
-[options="noheader",cols="1a,1a",frame=none,grid=none]
-|===
-|image::09-r.png[scale=50link=self]
-|
-|===
+image::09-r.png[scale=75,link=self]
 
 === Transliteration and Translation
 
@@ -237,6 +234,7 @@ KC. The petition should be rejected.
 [[doc3-coverslip]]
 == Cover Slip and Resolution (15 November 1841)
 
+[role="section-narrow"]
 === Summary
 
 The cover slip for Document 3 records the Rentcammer’s brief resolution: _"The petition of Krückeberg, dated the
@@ -244,11 +242,7 @@ The cover slip for Document 3 records the Rentcammer’s brief resolution: _"The
 initials and the notation “Copt an den Colon Krückeberg N. 10 in Berenbusch”, showing that a copy of the decision
 was dispatched to him.
 
-[options="noheader",cols="1a,1a",frame=none,grid=none]
-|===
-|image::10-l.png[link=self]
-|
-|===
+image::10-l.png[link=self]
 
 === Transliteration and Translation
 
