--- a/modules/689/pages/doc-04.adoc
+++ b/modules/689/pages/doc-04.adoc
@@ -71,50 +71,53 @@ d 21ten November
 [verse]
 ____
 NC. 5263                                      4
-presented in the Chamber on 24 November 1841               
+presented in the Chamber on 24 November 1841        
 3 gr. stamp duty
 
-Most Serene, Most Gracious Prince and Lord,  
-Most Serene Prince,  
+Most Serene, Most Gracious Prince and Lord, 
+Most Serene Prince, 
 
 [rdk] (clerk’s initials)
 
-I find myself compelled to most humbly petition Your Serene Highness,  
-since, because of leather debts of my parents to the firm of Hempel & Sons in Minden,  
-I am now hard pressed in a long lawsuit to make payment.  
-I have already made every effort to raise the money,  
-but in so short a time I can find no one who can lend it.  
-I have been permitted to provide judicially approved collateral,  
-and I have also sought from the High-Princely Rentkammer a loan of 200 Reichsthaler from the chamber treasury,  
-but this was denied me.  
-So I now see no other way, in my great distress,  
-than to direct my plea to Your Serene Highness:  
-that a loan of 200 Reichsthaler from the chamber treasury, against judicially approved collateral,  
-might be approved.  
-Or, if that cannot be,  
-then I beg our Most Serene Prince to take back my lands,  
-which my father in 1814 and 1818 purchased from the princely Söhren domain for 835 Reichsthaler 3 Groschen,  
-since I have already been threatened by the Amt, through Amtsassessor Höcker,  
-with the sale of my homestead,  
-and in addition the distraint of my own property has been ordered.  
-I would rather surrender the land so purchased  
-than see my entire holding sold off.  
+I find myself compelled to most humbly petition Your
+Serene Highness, since, because of leather debts of my
+parents to the firm of Hempel & Sons in Minden, I am
+now hard pressed in a long lawsuit to make payment.  I
+have already made every effort to raise the money, but
+in so short a time I can find no one who can lend it.
+I have been permitted to provide judicially approved
+collateral, and I have also sought from the
+High-Princely Rentkammer a loan of 200 Reichsthaler
+from the chamber treasury, but this was denied me.  So
+I now see no other way, in my great distress, than to
+direct my plea to Your Serene Highness: that a loan of
+200 Reichsthaler from the chamber treasury, against
+judicially approved collateral, might be approved. Or,
+if that cannot be, then I beg our Most Serene Prince
+to take back my lands, which my father in 1814 and
+1818 purchased from the princely Söhren domain for 835
+Reichsthaler 3 Groschen, since I have already been
+threatened by the Amt, through Amtsassessor Höcker,
+with the sale of my homestead, and in addition the
+distraint of my own property has been ordered. I would
+rather surrender the land so purchased than see my
+entire holding sold off. 
 
-For through this purchase 700 Reichsthaler of debt rests on my holding.  
-Besides, I have two buildings insured in the fire assurance for 525 Reichsthaler,  
-and also a garden of one and a half morgen.  
-So there is still sufficient security.  
-Surely, as gracious and kind father of the land,  
-you will not permit that my colony be sold,  
-for I am entirely innocent of this debt and have received nothing for it,  
-but have had to assume it for my parents’ obligation.  
-In deepest reverence I once again,  
-in firm trust in Your Serene Highness,  
-direct my most humble plea to obtain comfort and assistance,  
-for otherwise I shall be utterly forsaken  
-and must go to ruin undeservedly.  
+For through this purchase 700 Reichsthaler of debt
+rests on my holding. Besides, I have two buildings
+insured in the fire assurance for 525 Reichsthaler,
+and also a garden of one and a half morgen. So there
+is still sufficient security. Surely, as gracious and
+kind father of the land, you will not permit that my
+colony be sold, for I am entirely innocent of this
+debt and have received nothing for it, but have had to
+assume it for my parents’ obligation. In deepest
+reverence I once again, in firm trust in Your Serene
+Highness, direct my most humble plea to obtain comfort
+and assistance, for otherwise I shall be utterly
+forsaken and must go to ruin undeservedly. 
 
-Your most humble servant,  
+Your most humble servant, 
 Colon Krückeberg  
 No. 10 in Berenbusch  
 21 November 1841
