--- a/modules/689/pages/doc-04-cammer-response.adoc
+++ b/modules/689/pages/doc-04-cammer-response.adoc
@@ -3,7 +3,7 @@ So traurig die Lage des Krückeberg
 seÿn mag, da sehe ich doch nicht ein, wie
 ihm zu helfen. Ein Darlehn zu bewilligen,
 wo die Sicherheit so unzureichend, geht nicht
-an. Eben so entsamlich erscheint es mir,
+an. Eben so unerfreulich erscheint es mir,
 daß das angekaufte Land in der Söhre
 wieder gekauft werde. Mag Krückeberg,
 wenn er überhaupt der Schulden wegen
