--- a/modules/689/pages/doc-04-cammer-response.adoc
+++ b/modules/689/pages/doc-04-cammer-response.adoc
@@ -10,7 +10,7 @@ wenn er überhaupt der Schulden wegen
 darüber disponiren kann, dieses Land
 anderweit zu verkaufen suchen.
 Meiner Ansicht kann es bei dem ab-
-schlägl Bescheid nur lediglich sein Be-
+schlägl[igen] Bescheid nur lediglich sein Be-
 werden behalten.
 Bbg. 25. Novbr 41.
 
@@ -18,29 +18,33 @@ Reck
 
 [RC/Rl]. Abschriftl. dem Of. Kreutzinger
 zum baldigen gutienstlichen Bericht, ob
-das Land des Supplicanten in der Söhne
+das Land des Supplicanten in der Söhre
 seiner Lage u. Qualität nach zweckmä-
 ßig angekaufen u. zu welchem Preise
 anzukaufen seÿn dürfte.
 Bbg. 25. Nov. 41
-[Reitz]
+[Reck]
+
 
 St. 3g          N. C. 5263.
-     Concept                         Die vom Colon Krückeberg Nr. 10
-an den Oberförster Creuzinger        in Berenbusch zum Ankauf
-                  zu Baum            angebotene Länderei betr:
-                                     Abschrift eines obigenstand Gegenstand
-                                     betr: Gesuchs des p Krückeberg No 10 in
-                                     Berenbusch vom 21. cur. wird dem xx.
-                                     Creu-
 
+     Concept                         
+an den Oberförster Creuzinger        
+                  zu Baum            
+                                     
+Die vom Colon Krückeberg Nr. 10         
+in Berenbusch zum Ankauf                
+angebotene Länderei betr:               
+Abschrift eines obigen Gegenstand
+betr: Gesuchs des p Krückeberg No 10 in
+Berenbusch vom 21. cur. wird dem pp.
+                             Creu-
 
+H[???] 
+R.  Vz  W[??]
 
-H[???]
-R.  Vz
-Egg Lot[??]     W[??]
-27/11.
-
+Epp Lot[??]         
+27/11. 
 
 PAGE 2
 
@@ -59,8 +63,55 @@ Lm           L
 
 An
 den
-Durslautigsten
+Durslauchtigsten
 Gnädigsten Regierenden
 Dienst
 und Landes Herren
+....
+
+
+....
+So sad as Krückeberg’s situation may be,
+I still do not see how he can be helped.
+To approve a loan where the security is so
+insufficient is not possible. Just as unwelcome
+does it seem to me that the land in the Söhre
+which he purchased be bought back.
+If Krückeberg, on account of his debts,
+is at all able to dispose of it, let him seek
+to sell this land elsewhere.
+In my view, with the adverse decision
+it should simply remain as it is.
+Bückeburg, 25 Nov. 1841.
+
+Reck
+
+RC. Copy to Head Forester Kreutzinger
+for a prompt official report whether
+the supplicant’s land in the Söhre,
+considering its location and quality,
+is advisable to purchase and at what
+price it ought to be purchased.
+Bückeburg, 25 Nov. 1841.
+
+Reck
+
+Stamp: 3 gr.               N.C. 5263.
+
+     Concept
+to Head Forester Creuzinger
+                  at Baum
+
+Concerning the land offered for purchase
+by Colon Krückeberg No. 10
+in Berenbusch:
+Copy of the above-mentioned matter,
+concerning the petition of said Krückeberg
+No. 10 in Berenbusch of the 21st of this month,
+is to be referred to Creu–
+
+H[?]   R.   Vz   W[?]
+
+Epp Lot[?]
+27/11
 ....
