--- a/modules/689/pages/doc-04-cammer-response.adoc
+++ b/modules/689/pages/doc-04-cammer-response.adoc
@@ -16,11 +16,11 @@ Bbg. 25. Novbr 41.
 
 Reck
 
-[RC/Rl]. Abschriftl. dem Of. Kreutzinger
+RC. Abschriftl. dem Of. Kreutzinger
 zum baldigen gutienstlichen Bericht, ob
 das Land des Supplicanten in der Söhre
 seiner Lage u. Qualität nach zweckmä-
-ßig angekaufen u. zu welchem Preise
+ßig u. zu welchem Preise
 anzukaufen seÿn dürfte.
 Bbg. 25. Nov. 41
 [Reck]
@@ -32,45 +32,37 @@ St. 3g          N. C. 5263.
 an den Oberförster Creuzinger        
                   zu Baum            
                                      
-Die vom Colon Krückeberg Nr. 10         
-in Berenbusch zum Ankauf                
-angebotene Länderei betr:               
-Abschrift eines obigen Gegenstand
-betr: Gesuchs des p Krückeberg No 10 in
-Berenbusch vom 21. cur. wird dem pp.
-                             Creu-
 
-H[???] 
-R.  Vz  W[??]
-
-Epp Lot[??]         
-27/11. 
-
-PAGE 2
-
-Creuzinger mit dem Auftrage an-
-bei zugestellt, baldigst gutächtlich zu
-berichten, ob das Land des Supplikan-
-ten in der Söhre seiner Lage und
-Qualität nach zweckmäßig und
-zu welchem Preise anzukaufen
-sein dürfte.
-Bburg 25. Novbr 1841.
-F. p.
-Lm           L
+H[???]              Die vom Colon Krückeberg Nr. 10         
+R.  Vz  W[??]       in Berenbusch zum Ankauf                     
+                    angebotene Länderei betr:               
+Epp Lot[??]         Abschrift eines obigen Gegenstand
+27/11.              betr: Gesuchs des p Krückeberg No 10 in    
+                    Berenbusch vom 21. cur. wird dem pp.
+                    Creuzinger mit dem Auftrage an-
+                    bei zugestellt, baldigst gutächtlich zu
+                    berichten, ob das Land des Supplikan-
+                    ten in der Söhre seiner Lage und
+                    Qualität nach zweckmäßig und
+                    zu welchem Preise angekaufen
+                    sein dürfte.
+                    Bburg 25. Novbr 1841.
+                    F. p.
+                    Lm           L
 
 
 
-An
-den
-Durslauchtigsten
-Gnädigsten Regierenden
-Dienst
-und Landes Herren
+                    An
+                    den
+                    Durchlauchtigsten
+                    Gnädigsten Regierenden
+                    Fürst
+                    und Landes Herren
 ....
 
 
 ....
+Main opinion (Renkamnmer assessor Reck):
 So sad as Krückeberg’s situation may be,
 I still do not see how he can be helped.
 To approve a loan where the security is so
@@ -86,6 +78,7 @@ Bückeburg, 25 Nov. 1841.
 
 Reck
 
+RC instruction (Instructions of the Rentkammer officials, recorded in the case file):
 RC. Copy to Head Forester Kreutzinger
 for a prompt official report whether
 the supplicant’s land in the Söhre,
@@ -102,6 +95,7 @@ Stamp: 3 gr.               N.C. 5263.
 to Head Forester Creuzinger
                   at Baum
 
+Forwarding instruction (chancery’s copy of what was sent to Kreutzinger):
 Concerning the land offered for purchase
 by Colon Krückeberg No. 10
 in Berenbusch:
