--- a/modules/689/pages/doc-04-cammer-response.adoc
+++ b/modules/689/pages/doc-04-cammer-response.adoc
@@ -95,7 +95,7 @@ Stamp: 3 gr.               N.C. 5263.
 to Head Forester Creuzinger
                   at Baum
 
-Forwarding instruction (chancery’s copy of what was sent to Kreutzinger):
+File copy of the instruction sent to Kreutzinger:
 Concerning the land offered for purchase
 by Colon Krückeberg No. 10
 in Berenbusch:
