--- a/modules/689/pages/doc-04.adoc
+++ b/modules/689/pages/doc-04.adoc
@@ -1,38 +1,41 @@
-= Document 4: Second Petition of Colon Krückeberg to the Prince (21 Nov 1841)
+= Document 4: Krückeberg’s Second Petition and the Rentkammer’s Decision (21–25 Nov 1841)
 :page-role: wide
 
-[cols="1a,1a",options="noheader",frame=none,grid=none]
+[options="noheader",cols="1a,1a",frame=none,grid=none]
 |===
-|image::10-r.png[scale=50,link=self]
-|image::11-l.png[scale=50,link=self]
+|image::10-r.png[title="Click to Enlarge",scale=50,link=self]
+|image::11-l.png[title="Click to Enlarge",scale=50,link=self]
+|===
+[options="noheader",cols="1a,1a",frame=none,grid=none]
+|===
+|image::11-r.png[title="Click to Enlarge",scale=50,link=self]
+|image::12-l.png[title="Click to Enlarge",scale=50,link=self]
 |===
 
 [role="section-narrow"]
-== Overview and Timeline
+== Overview
 
-=== Overview
+On 21 November 1841, Colon Krückeberg of No. 10 Berenbusch submitted a second petition directly to the Prince of
+Schaumburg-Lippe. He described his plight: the leather debt inherited from his parents had led to long litigation;
+the Amt had permitted him to raise a loan of 200 Reichsthaler secured by his farmstead, but the Rentkammer had
+refused it. In desperation, he begged either for a loan against his property or for the Prince to take back the
+lands in the Söhren that his father had purchased in 1814 and 1818, rather than see his whole colony lost.
 
-By late November 1841, Johann Heinrich Krückeberg was out of options. 
-The Amt Bückeburg had earlier acknowledged that his farmstead could serve 
-as collateral for a loan to settle the long-standing debt to Hempel & Söhne, 
-and on this basis he had petitioned the Rentkammer for 200 Reichsthaler 
-from the chamber treasury. But the Rentkammer’s own valuation judged his 
-estate insufficient security, and the request was refused. In this second 
-petition of 21 November, Krückeberg appeals directly to the Prince himself: 
-either to grant the loan against his pledged estate, or, failing that, to 
-take back the very lands his father had bought from the domain, rather than 
-force the sale of his entire holding.
+Four days later, on 25 November 1841, the Rentkammer issued its decision. Assessor Reck found that a loan could not
+be granted, since the collateral was inadequate. He considered it equally undesirable for the state to buy back the
+Söhren lands, suggesting instead that Krückeberg try to sell them privately. The Rentkammer officials then ordered
+Oberförster Kreutzinger to provide an expert report on whether the Söhren lands might be worth purchasing and at
+what price, and a copy of this instruction was entered into the case file.
 
-=== Timeline
+== Timeline
 
-* *7 Oct 1841 (Doc 2):* Amt Bückeburg reports → loan of 190 rt should be raised; Stelle deemed sufficient security.  
-* *11 Nov 1841 (Doc 3):* Krückeberg petitions Rentkammer → requests 200 rt loan from chamber treasury.  
-* *15 Nov 1841 (Valuation & Decision):* Stelle valued; clerk doubts sufficiency → Kammer Collegium rejects
-petition.  
-* *21 Nov 1841 (Doc 4):* Krückeberg appeals again, now to the Prince, seeking relief or return of his purchased
-land.  
+* 21 Nov 1841 — Krückeberg submits second petition to the Prince.  
+* 25 Nov 1841 — Rentkammer decision by Reck: no loan; possible inquiry about Söhren lands.  
+* 25 Nov 1841 — Instruction sent to Oberförster Kreutzinger; file copy entered into case record.  
 
 == Transliteration and Translation
+
+=== Krückeberg’s Petition (21 Nov 1841)
 
 [cols="1a,1a",frame=none,grid=none]
 |===
@@ -145,3 +148,128 @@ No. 10 in Berenbusch
 21 November 1841
 ____
 |===
+
+=== Rentkammer Decision and Instruction (25 Nov 1841)
+
+[cols="1a,1a",frame=none]
+|===
+|Transliteration|Translation
+
+|
+[literal,subs="verbatim,quotes"]
+....
+So traurig die Lage des Krückeberg
+seÿn mag, da sehe ich doch nicht ein, wie
+ihm zu helfen. Ein Darlehn zu bewilligen,
+wo die Sicherheit so unzureichend, geht nicht
+an. Eben so unerfreulich erscheint es mir,
+daß das angekaufte Land in der Söhre
+wieder gekauft werde. Mag Krückeberg,
+wenn er überhaupt der Schulden wegen
+darüber disponiren kann, dieses Land
+anderweit zu verkaufen suchen.
+Meiner Ansicht kann es bei dem ab-
+schlägl[igen] Bescheid nur lediglich sein Be-
+werden behalten.
+Bbg. 25. Novbr 41.
+
+Reck
+
+RC. Abschriftl. dem Of. Kreutzinger
+zum baldigen gutienstlichen Bericht, ob
+das Land des Supplicanten in der Söhre
+seiner Lage u. Qualität nach zweckmä-
+ßig u. zu welchem Preise
+anzukaufen seÿn dürfte.
+Bbg. 25. Nov. 41
+[Reck]
+
+
+St. 3g          N. C. 5263.
+
+     Concept                         
+an den Oberförster Creuzinger        
+                  zu Baum            
+                                     
+
+H[???]              Die vom Colon Krückeberg Nr. 10         
+R.  Vz  W[??]       in Berenbusch zum Ankauf                     
+                    angebotene Länderei betr:               
+Epp Lot[??]         Abschrift eines obigen Gegenstand
+27/11.              betr: Gesuchs des p Krückeberg No 10 in    
+                    Berenbusch vom 21. cur. wird dem pp.
+                    Creuzinger mit dem Auftrage an-
+                    bei zugestellt, baldigst gutächtlich zu
+                    berichten, ob das Land des Supplikan-
+                    ten in der Söhre seiner Lage und
+                    Qualität nach zweckmäßig und
+                    zu welchem Preise angekaufen
+                    sein dürfte.
+                    Bburg 25. Novbr 1841.
+                    F. p.
+                    Lm           L
+
+
+
+                    An
+                    den
+                    Durchlauchtigsten
+                    Gnädigsten Regierenden
+                    Fürst
+                    und Landes Herren
+....
+
+|
+[verse]
+____
+*Main opinion (Renkamnmer assessor Reck):*
+So sad as Krückeberg’s situation may be,
+I still do not see how he can be helped.
+To approve a loan where the security is so
+insufficient is not possible. Just as unwelcome
+does it seem to me that the land in the Söhre
+which he purchased be bought back.
+If Krückeberg, on account of his debts,
+is at all able to dispose of it, let him seek
+to sell this land elsewhere.
+In my view, with the adverse decision
+it should simply remain as it is.
+Bückeburg, 25 Nov. 1841.
+
+Reck
+
+*RC instruction (Instructions of the Rentkammer
+officials, recorded in the case file):*
+RC. Copy to Head Forester Kreutzinger
+for a prompt official report whether
+the supplicant’s land in the Söhre,
+considering its location and quality,
+is advisable to purchase and at what
+price it ought to be purchased.
+Bückeburg, 25 Nov. 1841.
+
+Reck
+
+Stamp: 3 gr.               N.C. 5263.
+
+     Concept
+to Head Forester Creuzinger
+                  at Baum
+
+*File copy of the instruction sent to Kreutzinger:*
+Concerning the land offered for purchase
+by Colon Krückeberg No. 10
+in Berenbusch:
+Copy of the above-mentioned matter,
+concerning the petition of said Krückeberg
+No. 10 in Berenbusch of the 21st of this month,
+is to be referred to Creu–
+
+H[?]   R.   Vz   W[?]
+
+Epp Lot[?]
+27/11
+____
+|===
+
+
