--- a/modules/689/pages/doc-04.adoc
+++ b/modules/689/pages/doc-04.adoc
@@ -113,30 +113,30 @@ I find myself compelled to most humbly petition Your Serene
 Highness, since, because of leather debts of my parents to the
 firm of Hempel & Sons in Minden, I am now hard pressed in a long
 lawsuit to make payment.  I have already made every effort to
-raise the money, but in so short a time I can find no one who
-can lend it.  I have been permitted to provide judicially
-approved collateral, and I have also sought from the
-High-Princely Rentkammer a loan of 200 Reichsthaler from the
-chamber treasury, but this was denied me.  So I now see no other
-way, in my great distress, than to direct my plea to Your Serene
-Highness: that a loan of 200 Reichsthaler from the chamber
-treasury, against judicially approved collateral, might be
-approved. Or, if that cannot be, then I beg our Most Serene
-Prince to take back my lands, which my father in 1814 and 1818
-purchased from the princely Söhren domain for 835 Reichsthaler 3
-Groschen, since I have already been threatened by the Amt,
-through Amtsassessor Höcker, with the sale of my homestead, and
-in addition the distraint of my own property has been ordered. I
-would rather surrender the land so purchased than see my entire
-holding sold off. 
+raise the money, but in so short a time I can find no one who can
+lend it.  I have been permitted to provide judicially approved
+collateral, and I have also sought from the High-Princely
+Rentkammer a loan of 200 Reichsthaler from the chamber treasury,
+but this was denied me.  So I now see no other way, in my great
+distress, than to direct my plea to Your Serene Highness: that a
+loan of 200 Reichsthaler from the chamber treasury, against
+judicially approved collateral, might be approved. Or, if that
+cannot be, then I beg our Most Serene Prince to take back my
+lands, which my father in 1814 and 1818 purchased from the
+princely Söhren domain for 835 Reichsthaler 3 Groschen, since I
+have already been threatened by the Amt, through Amtsassessor
+Höcker, with the sale of my homestead, and in addition the
+distraint of my own property has been ordered. I would rather
+surrender the land so purchased than see my entire holding sold
+off. 
 
 For through this purchase 700 Reichsthaler of debt rests on my
 holding. Besides, I have two buildings insured in the fire
 assurance for 525 Reichsthaler, and also a garden of one and a
 half morgen. So there is still sufficient security. Surely, as
-gracious and kind father of the land, you will not permit that
-my colony be sold, for I am entirely innocent of this debt and
-have received nothing for it, but have had to assume it for my
+gracious and kind father of the land, you will not permit that my
+colony be sold, for I am entirely innocent of this debt and have
+received nothing for it, but have had to assume it for my
 parents’ obligation. In deepest reverence I once again, in firm
 trust in Your Serene Highness, direct my most humble plea to
 obtain comfort and assistance, for otherwise I shall be utterly
@@ -223,28 +223,22 @@ Epp Lot[??]         Abschrift eines obigen Gegenstand
 [verse]
 ____
 *Main opinion (Renkamnmer assessor Reck):*
-So sad as Krückeberg’s situation may be,
-I still do not see how he can be helped.
-To approve a loan where the security is so
-insufficient is not possible. Just as unwelcome
-does it seem to me that the land in the Söhre
-which he purchased be bought back.
-If Krückeberg, on account of his debts,
-is at all able to dispose of it, let him seek
-to sell this land elsewhere.
-In my view, with the adverse decision
-it should simply remain as it is.
+So sad as Krückeberg’s situation may be, I still do not see how
+he can be helped.  To approve a loan where the security is so
+insufficient is not possible. Just as unwelcome does it seem to
+me that the land in the Söhre which he purchased be bought back.
+If Krückeberg, on account of his debts, is at all able to dispose
+of it, let him seek to sell this land elsewhere.  In my view,
+with the adverse decision it should simply remain as it is.
 Bückeburg, 25 Nov. 1841.
 
 Reck
 
 *RC instruction (Instructions of the Rentkammer
 officials, recorded in the case file):*
-RC. Copy to Head Forester Kreutzinger
-for a prompt official report whether
-the supplicant’s land in the Söhre,
-considering its location and quality,
-is advisable to purchase and at what
+RC. Copy to Head Forester Kreutzinger for a prompt official
+report whether the supplicant’s land in the Söhre, considering
+its location and quality, is advisable to purchase and at what
 price it ought to be purchased.
 Bückeburg, 25 Nov. 1841.
 
@@ -252,23 +246,28 @@ Reck
 
 Stamp: 3 gr.               N.C. 5263.
 
+H[?]   R.   Vz   W[?]
+
+Epp Lot[?]
+27/11
+
      Concept
 to Head Forester Creuzinger
                   at Baum
 
 *File copy of the instruction sent to Kreutzinger:*
-Concerning the land offered for purchase
-by Colon Krückeberg No. 10
-in Berenbusch:
-Copy of the above-mentioned matter,
-concerning the petition of said Krückeberg
-No. 10 in Berenbusch of the 21st of this month,
-is to be referred to Creu–
+Concerning the land offered for purchase by Colon Krückeberg No.
+10 in Berenbusch:  Copy of the above-mentioned matter, concerning
+the petition of said Krückeberg of the 21st of this month, is to
+be forwarded to Creutzinger with the instruction attached, to
+report promptly by expert opinion whether the land in the Söhren,
+considering its location and quality, is advisable and at what
+price it ought to be purchased.  
+Bückeburg, 25 Nov. 1841.  
+For the record, Lm   L
 
-H[?]   R.   Vz   W[?]
-
-Epp Lot[?]
-27/11
+To the Most Serene,  
+Most Gracious Reigning Prince and Lord of the Land
 ____
 |===
 
