--- a/todo.adoc
+++ b/todo.adoc
@@ -2,13 +2,16 @@
 
 == 689
 
-Combine The "Amt Bückeburg - Decree and Execution Order - 10/13 July 1841" with 
-"Service of the Decree (Bescheid) — 27 July 1841 (re: Doc 1i, 10 July 1841)" into one page.
- 
 === Document Index
 
 Create xrefs from document index to the actual documents and supplemental documents it
 mentions.
+
+=== Combine Documents
+
+Combine The "Amt Bückeburg - Decree and Execution Order - 10/13 July 1841" with 
+"Service of the Decree (Bescheid) — 27 July 1841 (re: Doc 1i, 10 July 1841)" into one page.
+ 
 
 === Overview
 Finish new-overview.adoc and include in it the footnotes that are defined at the end of the page and include
