--- a/modules/689/pages/doc-04.adoc
+++ b/modules/689/pages/doc-04.adoc
@@ -19,7 +19,7 @@ On 21 November 1841, Colon Krückeberg of No. 10 Berenbusch submitted a second p
 Schaumburg-Lippe. He described his plight: the leather debt inherited from his parents had led to long litigation;
 the Amt had permitted him to raise a loan of 200 Reichsthaler secured by his farmstead, but the Rentkammer had
 refused it. In desperation, he begged either for a loan against his property or for the Prince to take back the
-lands in the Söhren that his father had purchased in 1814 and 1818, rather than see his whole colony lost.
+lands in the Söhren that his father had purchased in 1814 and 1818, rather than see his whole tenant farm lost.
 
 Four days later, on 25 November 1841, the Rentkammer issued its decision. Assessor Reck found that a loan could not
 be granted, since the collateral was inadequate. He considered it equally undesirable for the state to buy back the
