--- a/modules/689/pages/doc-04.adoc
+++ b/modules/689/pages/doc-04.adoc
@@ -21,6 +21,15 @@ the Amt had permitted him to raise a loan of 200 Reichsthaler secured by his far
 refused it. In desperation, he begged either for a loan against his property or for the Prince to take back the
 lands in the Söhren that his father had purchased in 1814 and 1818, rather than see his whole tenant farm lost.
 
+[NOTE]
+====
+*“Tenant farm”* translates the 19th-century German term *Colonie*.  In Schaumburg-Lippe a *Colonie* was *not
+owned outright*: it was a *hereditary leaseholding* held from the princely domain (overseen by the
+Rentkammer), with fixed dues/obligations. The holder (*Colon*) could often pledge or transfer his rights *with
+official approval*, but the land itself belonged to the domain.  Throughout this edition, *Colonie* is
+rendered as *tenant farm* (or *holding*) to reflect this status.
+====
+
 Four days later, on 25 November 1841, the Rentkammer issued its decision. Assessor Reck found that a loan could not
 be granted, since the collateral was inadequate. He considered it equally undesirable for the state to buy back the
 Söhren lands, suggesting instead that Krückeberg try to sell them privately. The Rentkammer officials then ordered
