--- a/modules/689/pages/doc-04.adoc
+++ b/modules/689/pages/doc-04.adoc
@@ -242,8 +242,8 @@ Bückeburg, 25 Nov. 1841.
 
 Reck
 
-*RC instruction (Instructions of the Rentkammer
-officials, recorded in the case file):*
+*RC instruction (Instructions of the Rentkammer officials,
+recorded in the case file):*
 RC. Copy to Head Forester Kreutzinger for a prompt official
 report whether the supplicant’s land in the Söhre, considering
 its location and quality, is advisable to purchase and at what
