--- a/modules/689/pages/doc-05.adoc
+++ b/modules/689/pages/doc-05.adoc
@@ -35,23 +35,22 @@ erhaltenen Aufträge zufolge, habe
 ich das Grundstück, von welchen in dem
 vom Colon Krückeberg unterm 21ten v. M.
 sub N. C. 5263 bei Fürstlicher Rentkammer
-eingereichten Gesuch Erwähnung ge¬
-I
+eingereichten Gesuch Erwähnung ge-
 schieht, an Ort und Stelle in Augen
 schein genommen und füge ich von
 der Lage dieses Grundstücks hier
 eine Situations-Zeichnung bei
-Das Grundstück halt nach Anga¬
+Das Grundstück halt nach Anga-
 be des Kruckeberg 9 Morgen 19 Rothen
 wovon 8 Morgen 90 Ruthen im Jahr
-1814 von der herrschaftlichen Sofor¬
-Weide und 49 Rothen im Jahr 1878
+1814 von der herrschaftlichen Söhre-
+Weide und 49 Rothen im Jahr 1818
 vom Forstgründe angekauft sind,
 uns sind bisher hiervon 8 1/2 Morgen
 als Saatland und das übrige
 als Wiese benutzt worden.
 das Grundstück hat einen
-schweren thönigten Boden, der als
+schweren thonigten Boden, der als
 mittelmässig von Güte anzunehmen,
 Wt wäre, wenn solcher nicht oft Ueber-
 schwemmungen ausgesetzt seÿ und
@@ -100,20 +99,20 @@ nach meinen Dafürhalten nicht im
 herrschaftlichen Interesse liegen,
 weil solches in keiner Hinsicht vor-
 theilhaft benutzt werden kann und zwar
-1, solches als Saatlanderey zu benutzen,
+1), solches als Saatlanderey zu benutzen,
 ist das Grundstück den herrschaftlichen
 Megeregen zu weit entfernt und
 bei einer Verpachtung wird, wegen
 der nassen Beschaffenheit des Bodens,
 schwerlich mehr den 2 Rtl Pacht pro Mor-
 gen gebothen werden.
-2, solches als Wiese zu benutzen, wird
+2), solches als Wiese zu benutzen, wird
 auch kein höherer Ertrag bezwökt
 werden, wenigstens liefert die an
 dieses Grundstück stossende Sohn werde
 auch nur sehr schlechtes Heu, als Folge
 des zu nassen Bodens und endlich
-3, solches mit Holz anzubauen ist
+3), solches mit Holz anzubauen ist
 eben so wenig vortheilhaft und
 zwar weil die Entwässerung sehr
 kostspielig werden würde und aufge-
