--- a/modules/689/pages/doc-05.adoc
+++ b/modules/689/pages/doc-05.adoc
@@ -20,7 +20,7 @@ NC. 5587                    pr in Cam 11 Dec 1841
 
                     An
                     Fürstliche Rentkammer
-                    Unterthänigster Bericht
+                    Untertänigster Bericht
                     des Oberförsters zu Baum,
 
                          Ein von Kruckeberg
@@ -39,20 +39,20 @@ eingereichten Gesuch Erwähnung ge-
 schieht, an Ort und Stelle in Augen
 schein genommen und füge ich von
 der Lage dieses Grundstücks hier
-eine Situations-Zeichnung bei
-Das Grundstück halt nach Anga-
+eine Situations-Zeichnung bei.
+Das Grundstück hält nach Anga-
 be des Kruckeberg 9 Morgen 19 Rothen
 wovon 8 Morgen 90 Ruthen im Jahr
 1814 von der herrschaftlichen Söhre-
 Weide und 49 Rothen im Jahr 1818
 vom Forstgründe angekauft sind,
-uns sind bisher hiervon 8 1/2 Morgen
+und sind bisher hiervon 8 1/2 Morgen
 als Saatland und das übrige
 als Wiese benutzt worden.
 das Grundstück hat einen
 schweren thonigten Boden, der als
-mittelmässig von Güte anzunehmen,
-Wt wäre, wenn solcher nicht oft Ueber-
+mittelmässig von Güte anzunehmen
+wäre, wenn solcher nicht oft Über-
 schwemmungen ausgesetzt seÿ und
 zwar, sobald die Ane austritt staunt
 das Wasser von der Neubenau bei
