--- a/modules/689/pages/doc-05.adoc
+++ b/modules/689/pages/doc-05.adoc
@@ -49,12 +49,12 @@ vom Forstgründe angekauft sind,
 und sind bisher hiervon 8 1/2 Morgen
 als Saatland und das übrige
 als Wiese benutzt worden.
-das Grundstück hat einen
-schweren thonigten Boden, der als
+Das Grundstück hat einen
+schweren tonigten Boden, der als
 mittelmässig von Güte anzunehmen
 wäre, wenn solcher nicht oft Über-
 schwemmungen ausgesetzt seÿ und
-zwar, sobald die Ane austritt staunt
+zwar, sobald die Aue austritt staut
 das Wasser von der Neubenau bei
 Evesen herauf auf die, auf der Söhre
 belegenen Grundstücke und weil
@@ -68,7 +68,7 @@ Nach der Aussage mehrerer
 Einwohner in Berenbusch und Nord-
 holz haben Krückeberg auf diesen
 Grundstücke bei trockenen Jahren
-sehr starkes Korn geerndet, dage-
+sehr starkes Korn geerntet, dage-
 gen bei nassen Jahren, oftmalen
 auch nicht die Einsaat wieder
 bekommen.
@@ -77,11 +77,11 @@ der Söhre belegenen Grundstücke
 im allgemeinen sehr verbessert
 werden könnten und zwar dadurch
 daß von diesen Grundstücken ein
-vielleicht 6 bis 8 Fußtiefer Canat
+vielleicht 6 bis 8 Fuß tiefer Canal
 nach der Flakenbrücke gezogen
-wurde, der bei Überschwemmung-
-en das Wasser ab und in den
-Canal bei der Flokenbrücke führte
+wurde, der bei Überschwemmungen
+das Wasser ab und in den Canal
+bei der Flokenbrücke führte
 wenigstens scheint dahin Gefälle zu sein.
 Nach meiner Beurtheilung und
 auch nach dem Urtheile Sachverständiger
@@ -101,15 +101,15 @@ weil solches in keiner Hinsicht vor-
 theilhaft benutzt werden kann und zwar
 1), solches als Saatlanderey zu benutzen,
 ist das Grundstück den herrschaftlichen
-Megeregen zu weit entfernt und
+Meÿereÿen zu weit entfernt und
 bei einer Verpachtung wird, wegen
 der nassen Beschaffenheit des Bodens,
 schwerlich mehr den 2 Rtl Pacht pro Mor-
 gen gebothen werden.
 2), solches als Wiese zu benutzen, wird
-auch kein höherer Ertrag bezwökt
+auch kein höherer Ertrag bewirkt
 werden, wenigstens liefert die an
-dieses Grundstück stossende Sohn werde
+dieses Grundstück stossende Söhr-Weide
 auch nur sehr schlechtes Heu, als Folge
 des zu nassen Bodens und endlich
 3), solches mit Holz anzubauen ist
@@ -130,7 +130,7 @@ und mehr als 50 Rthl pro Morgen
 dafür zu entrichten, kann nur
 in der Absicht sich begründen,
 den Supplicanten aus seiner
-mistlichen Lage zu befreien.
+misslichen Lage zu befreien.
 Baum d 10te Decbr 1841.
 [Creuzinger]
 ....
