--- a/modules/689/pages/doc-05.adoc
+++ b/modules/689/pages/doc-05.adoc
@@ -60,7 +60,7 @@ Evesen herauf auf die, auf der Söhre
 belegenen Grundstücke und weil
 von hieraus kein weiteres Gefälle
 ist, muß das Waßer, nachdem
-die Bebenaue wieder in ihre
+die Nebenaue wieder in ihre
 Ufer zurük getreten ist, derselben
 Weg von den Söhr-Grundstücken
 wieder nach Evesen zurück nehmen.
