--- a/modules/689/pages/doc-05.adoc
+++ b/modules/689/pages/doc-05.adoc
@@ -61,7 +61,7 @@ belegenen Grundstücke und weil
 von hieraus kein weiteres Gefälle
 ist, muß das Waßer, nachdem
 die Nebenaue wieder in ihre
-Ufer zurük getreten ist, derselben
+Ufer zurück getreten ist, derselben
 Weg von den Söhr-Grundstücken
 wieder nach Evesen zurück nehmen.
 Nach der Aussage mehrerer
@@ -133,4 +133,7 @@ den Supplicanten aus seiner
 misslichen Lage zu befreien.
 Baum d 10te Decbr 1841.
 [Creuzinger]
+....
+
+....
 ....
